--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -9,7 +9,7 @@
   volume = {1},
   number = {1},
   doi = {10.5281/XXXXX.YYYYY},
-  url = {https://github.com/jsysresearch/journal-proceedings/raw/master/2021/p2-raza2021SoK.pdf},
+  url = {https://escholarship.org/uc/item/1wg7h0qf},
   urldate = {2021-09-21},
   abstract = {A survey paper on the state of serverless computing from a developer's perspective.},
   area = {Serverless Systems},
@@ -27,7 +27,7 @@
   volume = {1},
   number = {1},
   doi = {10.5281/XXXXX.YYYYY},
-  url = {https://github.com/jsysresearch/journal-proceedings/raw/master/2021/p3-whittaker2021Matchmaker.pdf},
+  url = {https://escholarship.org/uc/item/8wk3343k},
   urldate = {2021-09-21},
   abstract = {Donut Paxos is a reconfigurable consensus protocol that leverages ideas from Vertical Paxos, DPaxos, and Flexible Paxos.},
   area = {Distributed Consensus},
@@ -46,7 +46,7 @@
   volume = {1},
   number = {1},
   doi = {10.5281/XXXXX.YYYYY},
-  url = {https://github.com/jsysresearch/journal-proceedings/raw/master/2021/p1-whittaker2021SoK.pdf},
+  url = {https://escholarship.org/uc/item/9w79h2jg},
   urldate = {2021-09-21},
   abstract = {Everything you always wanted to know about generalized multi-leader state machine replication protocols but were afraid to ask.},
   area = {Distributed Consensus},
