set of small things

--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -1,7 +1,7 @@
 
 @article{raza2021SoK,
   type = {Systemization of {{Knowledge}} ({{SoK}})},
-  title = {{{SoK}}: {{Function}}-as-a-{{Service}}: {{From An Application Developer}}'s {{Perspective}}},
+  title = {{{SoK}}: Function-as-a-{{Service}}: From {{An Application Developer}}'s {{Perspective}}},
   author = {Raza, Ali and Matta, Ibrahim and Akhtar, Nabeel and Kalavri, Vasiliki and Isahagian, Vatche},
   year = {2021},
   month = sep,
@@ -13,13 +13,13 @@
   urldate = {2021-09-21},
   abstract = {A survey paper on the state of serverless computing from a developer's perspective.},
   area = {Serverless Systems},
-  language = {en},
+  langid = {english},
   review_url = {https://openreview.net/forum?id=VdWaMgaTKtX}
 }
 
 @article{whittaker2021Matchmaker,
   type = {Solution},
-  title = {Matchmaker {{Paxos}}: {{A Reconfigurable Consensus Protocol}}},
+  title = {Matchmaker {{Paxos}}: A {{Reconfigurable Consensus Protocol}}},
   author = {Whittaker, Michael and Giridharan, Neil and Szekeres, Adriana and Hellerstein, Joseph and Howard, Heidi and Nawab, Faisal and Stoica, Ion},
   year = {2021},
   month = sep,
@@ -32,13 +32,13 @@
   abstract = {Donut Paxos is a reconfigurable consensus protocol that leverages ideas from Vertical Paxos, DPaxos, and Flexible Paxos.},
   area = {Distributed Consensus},
   artifacts_url = {https://github.com/mwhittaker/frankenpaxos/},
-  language = {en},
+  langid = {english},
   review_url = {https://openreview.net/forum?id=bXe1agiq9LN}
 }
 
 @article{whittaker2021SoK,
   type = {Systemization of {{Knowledge}} ({{SoK}})},
-  title = {{{SoK}}: {{A Generalized Multi}}-{{Leader State Machine Replication Tutorial}}},
+  title = {{{SoK}}: A {{Generalized Multi}}-{{Leader State Machine Replication Tutorial}}},
   author = {Whittaker, Michael and Giridharan, Neil and Szekeres, Adriana and Hellerstein, Joseph and Stoica, Ion},
   year = {2021},
   month = sep,
@@ -50,7 +50,7 @@
   urldate = {2021-09-21},
   abstract = {Everything you always wanted to know about generalized multi-leader state machine replication protocols but were afraid to ask.},
   area = {Distributed Consensus},
-  language = {en},
+  langid = {english},
   review_url = {https://openreview.net/forum?id=4Xo8nv5DNS}
 }
 
