added ISSN to footer and bibtex entries

--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -8,6 +8,7 @@
   journal = {JSys},
   volume = {1},
   number = {1},
+  issn = {2770-5501},
   doi = {10.5281/XXXXX.YYYYY},
   url = {https://escholarship.org/uc/item/1wg7h0qf},
   urldate = {2021-09-21},
@@ -26,6 +27,7 @@
   journal = {JSys},
   volume = {1},
   number = {1},
+  issn = {2770-5501},
   doi = {10.5281/XXXXX.YYYYY},
   url = {https://escholarship.org/uc/item/8wk3343k},
   urldate = {2021-09-21},
@@ -45,6 +47,7 @@
   journal = {JSys},
   volume = {1},
   number = {1},
+  issn = {2770-5501},
   doi = {10.5281/XXXXX.YYYYY},
   url = {https://escholarship.org/uc/item/9w79h2jg},
   urldate = {2021-09-21},
