added contact info

--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -1,14 +1,13 @@
 
 @article{2021-09-1-razaSOK,
   type = {Systemization of {{Knowledge}} ({{SoK}})},
-  title = {{{SoK}}: Function-as-a-{{Service}}: From {{An Application Developer}}'s {{Perspective}}},
+  title = {{{SoK}}: {{Function-as-a-Service}}: {{From An Application Developer}}'s {{Perspective}}},
   author = {Raza, Ali and Matta, Ibrahim and Akhtar, Nabeel and Kalavri, Vasiliki and Isahagian, Vatche},
   year = {2021/09/19,01:00},
   journal = {JSys},
   volume = {1},
   number = {1},
   issn = {2770-5501},
-  doi = {10.5281/XXXXX.YYYYY},
   url = {https://escholarship.org/uc/item/1wg7h0qf},
   urldate = {2021-09-21},
   abstract = {A survey paper on the state of serverless computing from a developer's perspective.},
@@ -19,7 +18,7 @@
 
 @article{2021-09-2-whittakerSOK,
   type = {Systemization of {{Knowledge}} ({{SoK}})},
-  title = {{{SoK}}: A {{Generalized Multi}}-{{Leader State Machine Replication Tutorial}}},
+  title = {{{SoK}}: {{A Generalized Multi-Leader State Machine Replication Tutorial}}},
   author = {Whittaker, Michael and Giridharan, Neil and Szekeres, Adriana and Hellerstein, Joseph and Stoica, Ion},
   year = {2021},
   month = sep,
@@ -27,7 +26,6 @@
   volume = {1},
   number = {1},
   issn = {2770-5501},
-  doi = {10.5281/XXXXX.YYYYY},
   url = {https://escholarship.org/uc/item/9w79h2jg},
   urldate = {2021-09-21},
   abstract = {Everything you always wanted to know about generalized multi-leader state machine replication protocols but were afraid to ask.},
@@ -38,7 +36,7 @@
 
 @article{2021-09-3-whittakerSolution,
   type = {Solution},
-  title = {Matchmaker {{Paxos}}: A {{Reconfigurable Consensus Protocol}}},
+  title = {Matchmaker {{Paxos}}: {{A Reconfigurable Consensus Protocol}}},
   author = {Whittaker, Michael and Giridharan, Neil and Szekeres, Adriana and Hellerstein, Joseph and Howard, Heidi and Nawab, Faisal and Stoica, Ion},
   year = {2021},
   month = sep,
@@ -46,7 +44,6 @@
   volume = {1},
   number = {1},
   issn = {2770-5501},
-  doi = {10.5281/XXXXX.YYYYY},
   url = {https://escholarship.org/uc/item/8wk3343k},
   urldate = {2021-09-21},
   abstract = {Donut Paxos is a reconfigurable consensus protocol that leverages ideas from Vertical Paxos, DPaxos, and Flexible Paxos.},
@@ -66,7 +63,6 @@
   volume = {1},
   number = {1},
   issn = {2770-5501},
-  doi = {10.5281/XXXXX.YYYYY},
   url = {https://escholarship.org/uc/item/63n4s9w2},
   urldate = {2021-11-15},
   abstract = {When designing their performance evaluations, networking researchers often encounter questions such as: How long should a run be? How many runs to perform? How to account for the variability across multiple runs? What statistical methods should be used to analyze the data? Despite their best intentions, researchers often answer these questions differently, thus impairing the replicability of their evaluations and the confidence in their results. In this paper, we propose a concrete methodology for the design and analysis of performance evaluations. Our approach hierarchically partitions the performance evaluation into three timescales, following the principle of separation of concerns. The idea is to understand, for each timescale, the temporal characteristics of variability sources, and then to apply rigorous statistical methods to derive performance results with quantifiable confidence in spite of the inherent variability. We implement this methodology in a software framework called TriScale. For each performance metric, TriScale computes a variability score that estimates, with a given confidence, how similar the results would be if the evaluation were replicated; in other words, TriScale quantifies the replicability of evaluations. We showcase the practicality and usefulness of TriScale on four different case studies demonstrating that TriScale helps to generalize and strengthen published results. Improving the standards of replicability in networking is a complex challenge. This paper is an important contribution to this endeavor; it provides networking researchers with a rational and concrete experimental methodology rooted in sound statistical foundations. The first of its kind.},
