--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -8,6 +8,7 @@
   volume = {1},
   number = {1},
   issn = {2770-5501},
+  doi = {10.5070/SR31154815},
   url = {https://escholarship.org/uc/item/1wg7h0qf},
   urldate = {2021-09-21},
   abstract = {A survey paper on the state of serverless computing from a developer's perspective.},
@@ -26,6 +27,7 @@
   volume = {1},
   number = {1},
   issn = {2770-5501},
+  doi = {10.5070/SR31154817},
   url = {https://escholarship.org/uc/item/9w79h2jg},
   urldate = {2021-09-21},
   abstract = {Everything you always wanted to know about generalized multi-leader state machine replication protocols but were afraid to ask.},
@@ -44,6 +46,7 @@
   volume = {1},
   number = {1},
   issn = {2770-5501},
+  doi = {10.5070/SR31154842},
   url = {https://escholarship.org/uc/item/8wk3343k},
   urldate = {2021-09-21},
   abstract = {Donut Paxos is a reconfigurable consensus protocol that leverages ideas from Vertical Paxos, DPaxos, and Flexible Paxos.},
@@ -63,6 +66,7 @@
   volume = {1},
   number = {1},
   issn = {2770-5501},
+  doi = {10.5070/SR31155408},
   url = {https://escholarship.org/uc/item/63n4s9w2},
   urldate = {2021-11-15},
   abstract = {When designing their performance evaluations, networking researchers often encounter questions such as: How long should a run be? How many runs to perform? How to account for the variability across multiple runs? What statistical methods should be used to analyze the data? Despite their best intentions, researchers often answer these questions differently, thus impairing the replicability of their evaluations and the confidence in their results. In this paper, we propose a concrete methodology for the design and analysis of performance evaluations. Our approach hierarchically partitions the performance evaluation into three timescales, following the principle of separation of concerns. The idea is to understand, for each timescale, the temporal characteristics of variability sources, and then to apply rigorous statistical methods to derive performance results with quantifiable confidence in spite of the inherent variability. We implement this methodology in a software framework called TriScale. For each performance metric, TriScale computes a variability score that estimates, with a given confidence, how similar the results would be if the evaluation were replicated; in other words, TriScale quantifies the replicability of evaluations. We showcase the practicality and usefulness of TriScale on four different case studies demonstrating that TriScale helps to generalize and strengthen published results. Improving the standards of replicability in networking is a complex challenge. This paper is an important contribution to this endeavor; it provides networking researchers with a rational and concrete experimental methodology rooted in sound statistical foundations. The first of its kind.},
