--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -104,6 +104,7 @@
   title = {Identifying {{Mismatches Between Microservice Testbeds}} and {{Industrial Perceptions}} of {{Microservices}}},
   author = {Seshagiri, Vishwanath and Huye, Darby and Liu, Lan and Wildani, Avani and Sambasivan, Raja R.},
   year = {2022},
+  month = jun,
   journal = {Journal of Systems Research},
   volume = {2},
   number = {1},
@@ -115,6 +116,25 @@
   area = {Serverless},
   langid = {english},
   review_url = {https://openreview.net/forum?id=SzgbRfqFRY}
+}
+
+@article{2022-07-21-licciardelloSolution,
+  type = {Solution},
+  ids = {licciardello2022Solution},
+  title = {Prepare Your Video for Streaming with {{Segue}}},
+  author = {Licciardello, Melissa and Humbel, Lukas and Rohr, Fabian and Gr{\"u}ner, Maximilian and Singla, Ankit},
+  year = {2022},
+  month = jul,
+  journal = {Journal of Systems Research},
+  volume = {2},
+  number = {1},
+  doi = {10.5070/SR32158113},
+  url = {https://escholarship.org/uc/item/8m39f25q},
+  urldate = {2022-07-21},
+  abstract = {We identify new opportunities in video streaming, involving the joint consideration of offline video chunking and on-line rate adaptation. Due to a video's complexity varyingover time, certain parts are more likely to cause performanceimpairments during playback with a particular rate adaptationalgorithm. To address such an issue, we propose Segue ,which carefully uses variable-length video segments, and augment specific segments with additional bitrate tracks. The keynovelty of our approach is in making such decisions basedon the video's time-varying complexity and the expected rateadaptation behavior over time. We propose and implementseveral methods for such adaptation-aware chunking. Ourresults show that Segue substantially reduces rebufferingand quality fluctuations, while maintaining video quality delivered; Segue improves QoE by 9\% on average, and by 22\%in low-bandwidth conditions. Finally, we view our problemframing as a first step in a new thread on algorithmic anddesign innovation in video streaming, and leave the readerwith several interesting open questions.},
+  area = {Networking},
+  langid = {english},
+  review_url = {https://openreview.net/forum?id=iUU6Qr3eQd6}
 }
 
 
