added missing artifact link

--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -133,6 +133,7 @@
   urldate = {2022-07-21},
   abstract = {We identify new opportunities in video streaming, involving the joint consideration of offline video chunking and on-line rate adaptation. Due to a video's complexity varyingover time, certain parts are more likely to cause performanceimpairments during playback with a particular rate adaptationalgorithm. To address such an issue, we propose Segue ,which carefully uses variable-length video segments, and augment specific segments with additional bitrate tracks. The keynovelty of our approach is in making such decisions basedon the video's time-varying complexity and the expected rateadaptation behavior over time. We propose and implementseveral methods for such adaptation-aware chunking. Ourresults show that Segue substantially reduces rebufferingand quality fluctuations, while maintaining video quality delivered; Segue improves QoE by 9\% on average, and by 22\%in low-bandwidth conditions. Finally, we view our problemframing as a first step in a new thread on algorithmic anddesign innovation in video streaming, and leave the readerwith several interesting open questions.},
   area = {Networking},
+  artifacts_url = {https://github.com/melADTR/Segue},
   langid = {english},
   review_url = {https://openreview.net/forum?id=iUU6Qr3eQd6}
 }
