fixed author name typo

--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -182,7 +182,7 @@
   ids = {Sol_Mir-BFT},
   title = {Mir-{{BFT}}: {{Scalable}} and {{Robust BFT}} for {{Decentralized Networks}}},
   shorttitle = {Mir-{{BFT}}},
-  author = {Stathakopoulou, Chrysoula and Tudor, David and Pavlovic, Matej and Vukoli{\'c}, Marko},
+  author = {Stathakopoulou, Chrysoula and David, Tudor and Pavlovic, Matej and Vukoli{\'c}, Marko},
   year = {2022},
   month = oct,
   journal = {Journal of Systems Research},
