fixed author name" ;

--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -225,7 +225,7 @@
   ids = {Pblm_Sharded_Tx_Processing},
   title = {Cerberus: {{Minimalistic Multi-shard Byzantine-resilient Transaction Processing}}},
   shorttitle = {Cerberus},
-  author = {Hellings, Jelle and Hugues, Daniel P. and Primero, Joshua and Sadoghi, Mohammad},
+  author = {Hellings, Jelle and Hughes, Daniel P. and Primero, Joshua and Sadoghi, Mohammad},
   year = {2023},
   month = jun,
   journal = {Journal of Systems Research},
