added month and day to the latest paper (for proper ordering)

--- a/_bibliography/jsys.bib
+++ b/_bibliography/jsys.bib
@@ -269,6 +269,7 @@
   shorttitle = {[{{Solution}}] {{Mason}}},
   author = {Hodsdon, Christopher and Stavrinos, Theano and {Katz-Bassett}, Ethan and Lloyd, Wyatt},
   year = {2023},
+  month = jun,
   journal = {Journal of Systems Research},
   volume = {3},
   number = {1},
